# devto-mcp-server

./: .env.example  .gitignore  CONTEXT.md  HERMES.md  README.md  pyproject.toml
docs/adr/: 0001-thin-devto-server.md  README.md
src/devto_mcp_server/: __init__.py  server.py
tests/: test_write_tools.py
