[project]
name = "devto-mcp-server"
version = "0.1.0"
description = "MCP server wrapping the dev.to API for article search and retrieval"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stephen Phillips", email = "stephen.phillips.work@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
devto-mcp-server = "devto_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devto_mcp_server"]
